--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,9 @@ dependencies = [
 
 [tool.uv]
 dev-dependencies = [
+    "mypy>=1.13.0",
     "ruff>=0.7.1",
 ]
-
 
 [tool.ruff]
 line-length = 120
@@ -24,6 +24,3 @@ target-version = "py312"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "N", "T", "ERA"]
-
-[tool.mypy]
-ignore_missing_imports = true
