--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "psycopg>=3.2.3",
     "pwdlib[argon2]>=0.2.1",
     "pydantic-settings>=2.6.0",
+    "sqlalchemy>=2.0.36",
 ]
 
 [tool.uv]
